welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: value Green is not a member of object java.awt.Color
	if(getCoulourSol==Color.Green){
                                ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if(getCoulourSol==Color.Green){
        ^