welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var getCoulourSol:Boolean = false;
	avance();
	if(getCoulourSol==Color.Green){
		return true ;
	}
		
	}
		